HMW-107 Fixed issue of whitespace at the bottom of the legend when the Esri legend is not displayed.

--- a/app/client/src/components/pages/LocationMap/mapStyles.css
+++ b/app/client/src/components/pages/LocationMap/mapStyles.css
@@ -168,6 +168,7 @@
 }
 
 .esri-legend {
+  min-height: auto !important;
   max-height: none !important;
 }
 
